get_content refactor errors

--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,8 @@
     "\n",
     "                new_link = filter_name(join_urls(url_netloc, link_netloc)) + file_ext\n",
     "\n",
-    "                link_to_save = join_urls(urlparse(base_url).scheme, url_netloc, link_netloc)\n",
-    "                print(link_to_save, link_netloc)\n",
+    "                link_to_save = join_urls(urlparse(base_url).scheme + '://' + url_netloc, link_netloc)\n",
+    "                print(link_to_save)\n",
     "\n",
     "                links.append((link_to_save, new_link))\n",
     "\n",
@@ -120,9 +120,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://ru.hexlet.io/assets/application\n",
+      "https://ru.hexlet.io/courses\n",
+      "https://ru.hexlet.io/assets/professions/python\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<!-- Используйте этот код в своём проекте --><!DOCTYPE html>\n",
+       " <html lang=\"ru\"><head>\n",
+       "   <meta charset=\"utf-8\"/>\n",
+       "   <title>\n",
+       "    Курсы по программированию Хекслет\n",
+       "   </title>\n",
+       "   <link href=\"https://cdn2.hexlet.io/assets/menu.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+       "   <link href=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+       "   <link href=\"ru-hexlet-io-courses_files/ru-hexlet-io-courses.html\" rel=\"canonical\"/>\n",
+       "  </head>\n",
+       "  <body>\n",
+       "   <img alt=\"Иконка профессии Python-программист\" src=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png\"/>\n",
+       "   <img alt=\"Иконка профессии Python-ананист\" src=\"https://s7d2.scene7.com/is/image/Caterpillar/CM20180911-37279-17325\"/>\n",
+       "   <h3>\n",
+       "    <a href=\"/professions/python\">\n",
+       "     Python-программист\n",
+       "    </a>\n",
+       "   </h3>\n",
+       "   <script src=\"https://js.stripe.com/v3/\">\n",
+       "   </script>\n",
+       "   <script src=\"ru-hexlet-io-courses_files/ru-hexlet-io-packs-js-runtime.js\">\n",
+       "   </script>\n",
+       "  \n",
+       " </body></html>,\n",
+       " [('https://ru.hexlet.io/assets/application',\n",
+       "   'ru-hexlet-io-assets-application.css'),\n",
+       "  ('https://ru.hexlet.io/courses', 'ru-hexlet-io-courses.html'),\n",
+       "  ('https://ru.hexlet.io/assets/professions/python',\n",
+       "   'ru-hexlet-io-assets-professions-python.png'),\n",
+       "  ('https://ru.hexlet.io/packs/js/runtime.js',\n",
+       "   'ru-hexlet-io-packs-js-runtime.js')])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "replace_links(bsoup, url)"
    ]
