--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -120,59 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://ru.hexlet.io/assets/application\n",
-      "https://ru.hexlet.io/courses\n",
-      "https://ru.hexlet.io/assets/professions/python\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<!-- Используйте этот код в своём проекте --><!DOCTYPE html>\n",
-       " <html lang=\"ru\"><head>\n",
-       "   <meta charset=\"utf-8\"/>\n",
-       "   <title>\n",
-       "    Курсы по программированию Хекслет\n",
-       "   </title>\n",
-       "   <link href=\"https://cdn2.hexlet.io/assets/menu.css\" media=\"all\" rel=\"stylesheet\"/>\n",
-       "   <link href=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css\" media=\"all\" rel=\"stylesheet\"/>\n",
-       "   <link href=\"ru-hexlet-io-courses_files/ru-hexlet-io-courses.html\" rel=\"canonical\"/>\n",
-       "  </head>\n",
-       "  <body>\n",
-       "   <img alt=\"Иконка профессии Python-программист\" src=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png\"/>\n",
-       "   <img alt=\"Иконка профессии Python-ананист\" src=\"https://s7d2.scene7.com/is/image/Caterpillar/CM20180911-37279-17325\"/>\n",
-       "   <h3>\n",
-       "    <a href=\"/professions/python\">\n",
-       "     Python-программист\n",
-       "    </a>\n",
-       "   </h3>\n",
-       "   <script src=\"https://js.stripe.com/v3/\">\n",
-       "   </script>\n",
-       "   <script src=\"ru-hexlet-io-courses_files/ru-hexlet-io-packs-js-runtime.js\">\n",
-       "   </script>\n",
-       "  \n",
-       " </body></html>,\n",
-       " [('https://ru.hexlet.io/assets/application',\n",
-       "   'ru-hexlet-io-assets-application.css'),\n",
-       "  ('https://ru.hexlet.io/courses', 'ru-hexlet-io-courses.html'),\n",
-       "  ('https://ru.hexlet.io/assets/professions/python',\n",
-       "   'ru-hexlet-io-assets-professions-python.png'),\n",
-       "  ('https://ru.hexlet.io/packs/js/runtime.js',\n",
-       "   'ru-hexlet-io-packs-js-runtime.js')])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "replace_links(bsoup, url)"
    ]
@@ -329,22 +279,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "ParseResult(scheme='https', netloc='site.com', path='/blog/about.html', params='', query='', fragment='')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pairs"
+    "urlparse('https://site.com/blog/about.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParseResult(scheme='https', netloc='site.com', path='/blog/about', params='', query='', fragment='')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlparse('https://site.com/blog/about')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url1 = 'https://site.com/blog/about'\n",
+    "url2 = 'https://site.com/blog/about.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url2.replace('.html','') == url1"
    ]
   },
   {
